libqt6c/src/libqdatetime.hpp

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QTimeZone QTimeZone;
QDate* QDate_new(const QDate* other);
QDate* QDate_new2(QDate* other);
QDate* QDate_new3();
QDate* QDate_new4(int y, int m, int d);
QDate* QDate_new5(int y, int m, int d, QCalendar* cal);
QDate* QDate_new6(const QDate* param1);
bool QDate_IsNull(const QDate* self);
bool QDate_IsValid(const QDate* self);
int QDate_Year(const QDate* self);
int QDate_Month(const QDate* self);
int QDate_Day(const QDate* self);
int QDate_DayOfWeek(const QDate* self);
int QDate_DayOfYear(const QDate* self);
int QDate_DaysInMonth(const QDate* self);
int QDate_DaysInYear(const QDate* self);
int QDate_WeekNumber(const QDate* self);
int QDate_Year2(const QDate* self, QCalendar* cal);
int QDate_Month2(const QDate* self, QCalendar* cal);
int QDate_Day2(const QDate* self, QCalendar* cal);
int QDate_DayOfWeek2(const QDate* self, QCalendar* cal);
int QDate_DayOfYear2(const QDate* self, QCalendar* cal);
int QDate_DaysInMonth2(const QDate* self, QCalendar* cal);
int QDate_DaysInYear2(const QDate* self, QCalendar* cal);
QDateTime* QDate_StartOfDay(const QDate* self);
QDateTime* QDate_EndOfDay(const QDate* self);
QDateTime* QDate_StartOfDay2(const QDate* self, const QTimeZone* zone);
QDateTime* QDate_EndOfDay2(const QDate* self, const QTimeZone* zone);
libqt_string QDate_ToString(const QDate* self);
libqt_string QDate_ToString2(const QDate* self, const libqt_string format);
bool QDate_SetDate(QDate* self, int year, int month, int day);
bool QDate_SetDate2(QDate* self, int year, int month, int day, QCalendar* cal);
void QDate_GetDate(const QDate* self, int* year, int* month, int* day);
QDate* QDate_AddDays(const QDate* self, long long days);
QDate* QDate_AddMonths(const QDate* self, int months);
QDate* QDate_AddYears(const QDate* self, int years);
QDate* QDate_AddMonths2(const QDate* self, int months, QCalendar* cal);
QDate* QDate_AddYears2(const QDate* self, int years, QCalendar* cal);
long long QDate_DaysTo(const QDate* self, QDate* d);
QDate* QDate_CurrentDate();
QDate* QDate_FromString4(const libqt_string stringVal);
QDate* QDate_FromString5(const libqt_string stringVal, const libqt_string format);
bool QDate_IsValid2(int y, int m, int d);
bool QDate_IsLeapYear(int year);
QDate* QDate_FromJulianDay(long long jd_);
long long QDate_ToJulianDay(const QDate* self);
int QDate_WeekNumber1(const QDate* self, int* yearNum);
QDateTime* QDate_StartOfDay1(const QDate* self, int spec);
QDateTime* QDate_StartOfDay22(const QDate* self, int spec, int offsetSeconds);
QDateTime* QDate_EndOfDay1(const QDate* self, int spec);
QDateTime* QDate_EndOfDay22(const QDate* self, int spec, int offsetSeconds);
libqt_string QDate_ToString1(const QDate* self, int format);
libqt_string QDate_ToString22(const QDate* self, const libqt_string format, QCalendar* cal);
QDate* QDate_FromString23(const libqt_string stringVal, int format);
QDate* QDate_FromString34(const libqt_string stringVal, const libqt_string format, QCalendar* cal);
void QDate_Delete(QDate* self);