QtBeef/src/Qt/qdatetime.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QDate
// --------------------------------------------------------------
[CRepr]
struct QDate_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QDate_new")]
	public static extern QDate_Ptr QDate_new(void** other);
	[LinkName("QDate_new2")]
	public static extern QDate_Ptr QDate_new2(void** other);
	[LinkName("QDate_new3")]
	public static extern QDate_Ptr QDate_new3();
	[LinkName("QDate_new4")]
	public static extern QDate_Ptr QDate_new4(c_int y, c_int m, c_int d);
	[LinkName("QDate_new5")]
	public static extern QDate_Ptr QDate_new5(c_int y, c_int m, c_int d, void* cal);
	[LinkName("QDate_new6")]
	public static extern QDate_Ptr QDate_new6(void** param1);
	[LinkName("QDate_Delete")]
	public static extern void QDate_Delete(QDate_Ptr self);
	[LinkName("QDate_IsNull")]
	public static extern bool QDate_IsNull(void* self);
	[LinkName("QDate_IsValid")]
	public static extern bool QDate_IsValid(void* self);
	[LinkName("QDate_Year")]
	public static extern c_int QDate_Year(void* self);
	[LinkName("QDate_Month")]
	public static extern c_int QDate_Month(void* self);
	[LinkName("QDate_Day")]
	public static extern c_int QDate_Day(void* self);
	[LinkName("QDate_DayOfWeek")]
	public static extern c_int QDate_DayOfWeek(void* self);
	[LinkName("QDate_DayOfYear")]
	public static extern c_int QDate_DayOfYear(void* self);
	[LinkName("QDate_DaysInMonth")]
	public static extern c_int QDate_DaysInMonth(void* self);
	[LinkName("QDate_DaysInYear")]
	public static extern c_int QDate_DaysInYear(void* self);
	[LinkName("QDate_WeekNumber")]
	public static extern c_int QDate_WeekNumber(void* self);
	[LinkName("QDate_Year2")]
	public static extern c_int QDate_Year2(void* self, void* cal);
	[LinkName("QDate_Month2")]
	public static extern c_int QDate_Month2(void* self, void* cal);
	[LinkName("QDate_Day2")]
	public static extern c_int QDate_Day2(void* self, void* cal);
	[LinkName("QDate_DayOfWeek2")]
	public static extern c_int QDate_DayOfWeek2(void* self, void* cal);
	[LinkName("QDate_DayOfYear2")]
	public static extern c_int QDate_DayOfYear2(void* self, void* cal);
	[LinkName("QDate_DaysInMonth2")]
	public static extern c_int QDate_DaysInMonth2(void* self, void* cal);
	[LinkName("QDate_DaysInYear2")]
	public static extern c_int QDate_DaysInYear2(void* self, void* cal);
	[LinkName("QDate_StartOfDay")]
	public static extern void* QDate_StartOfDay(void* self);
	[LinkName("QDate_EndOfDay")]
	public static extern void* QDate_EndOfDay(void* self);
	[LinkName("QDate_StartOfDay2")]
	public static extern void* QDate_StartOfDay2(void* self, void** zone);
	[LinkName("QDate_EndOfDay2")]
	public static extern void* QDate_EndOfDay2(void* self, void** zone);
	[LinkName("QDate_ToString")]
	public static extern libqt_string QDate_ToString(void* self);
	[LinkName("QDate_ToString2")]
	public static extern libqt_string QDate_ToString2(void* self, libqt_string format);
	[LinkName("QDate_SetDate")]
	public static extern bool QDate_SetDate(void* self, c_int year, c_int month, c_int day);
	[LinkName("QDate_SetDate2")]
	public static extern bool QDate_SetDate2(void* self, c_int year, c_int month, c_int day, void* cal);
	[LinkName("QDate_GetDate")]
	public static extern void QDate_GetDate(void* self, c_int* year, c_int* month, c_int* day);
	[LinkName("QDate_AddDays")]
	public static extern void* QDate_AddDays(void* self, c_longlong days);
	[LinkName("QDate_AddMonths")]
	public static extern void* QDate_AddMonths(void* self, c_int months);
	[LinkName("QDate_AddYears")]
	public static extern void* QDate_AddYears(void* self, c_int years);
	[LinkName("QDate_AddMonths2")]
	public static extern void* QDate_AddMonths2(void* self, c_int months, void* cal);
	[LinkName("QDate_AddYears2")]
	public static extern void* QDate_AddYears2(void* self, c_int years, void* cal);
	[LinkName("QDate_DaysTo")]
	public static extern c_longlong QDate_DaysTo(void* self, void* d);
	[LinkName("QDate_CurrentDate")]
	public static extern void* QDate_CurrentDate();
	[LinkName("QDate_FromString4")]
	public static extern void* QDate_FromString4(libqt_string stringVal);
	[LinkName("QDate_FromString5")]
	public static extern void* QDate_FromString5(libqt_string stringVal, libqt_string format);
	[LinkName("QDate_IsValid2")]
	public static extern bool QDate_IsValid2(c_int y, c_int m, c_int d);
	[LinkName("QDate_IsLeapYear")]
	public static extern bool QDate_IsLeapYear(c_int year);
	[LinkName("QDate_FromJulianDay")]
	public static extern void* QDate_FromJulianDay(c_longlong jd_);
	[LinkName("QDate_ToJulianDay")]
	public static extern c_longlong QDate_ToJulianDay(void* self);
	[LinkName("QDate_WeekNumber1")]
	public static extern c_int QDate_WeekNumber1(void* self, c_int* yearNum);
	[LinkName("QDate_StartOfDay1")]
	public static extern void* QDate_StartOfDay1(void* self, Qt_TimeSpec spec);
	[LinkName("QDate_StartOfDay22")]
	public static extern void* QDate_StartOfDay22(void* self, Qt_TimeSpec spec, c_int offsetSeconds);
	[LinkName("QDate_EndOfDay1")]
	public static extern void* QDate_EndOfDay1(void* self, Qt_TimeSpec spec);
	[LinkName("QDate_EndOfDay22")]
	public static extern void* QDate_EndOfDay22(void* self, Qt_TimeSpec spec, c_int offsetSeconds);
	[LinkName("QDate_ToString1")]
	public static extern libqt_string QDate_ToString1(void* self, Qt_DateFormat format);
	[LinkName("QDate_ToString22")]
	public static extern libqt_string QDate_ToString22(void* self, libqt_string format, void* cal);
	[LinkName("QDate_FromString23")]
	public static extern void* QDate_FromString23(libqt_string stringVal, Qt_DateFormat format);
	[LinkName("QDate_FromString34")]
	public static extern void* QDate_FromString34(libqt_string stringVal, libqt_string format, void* cal);
}
class QDate : IQDate
{
	private QDate_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QDate_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQDate other)
	{
		this.ptr = CQt.QDate_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QDate_new3();
	}
	public this(c_int y, c_int m, c_int d)
	{
		this.ptr = CQt.QDate_new4(y, m, d);
	}
	public this(c_int y, c_int m, c_int d, IQCalendar cal)
	{
		this.ptr = CQt.QDate_new5(y, m, d, (.)cal?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QDate_Delete(this.ptr);
	}
	public bool IsNull()
	{
		return CQt.QDate_IsNull((.)this.ptr.Ptr);
	}
	public bool IsValid()
	{
		return CQt.QDate_IsValid((.)this.ptr.Ptr);
	}
	public c_int Year()
	{
		return CQt.QDate_Year((.)this.ptr.Ptr);
	}
	public c_int Month()
	{
		return CQt.QDate_Month((.)this.ptr.Ptr);
	}
	public c_int Day()
	{
		return CQt.QDate_Day((.)this.ptr.Ptr);
	}
	public c_int DayOfWeek()
	{
		return CQt.QDate_DayOfWeek((.)this.ptr.Ptr);
	}
	public c_int DayOfYear()
	{
		return CQt.QDate_DayOfYear((.)this.ptr.Ptr);
	}
	public c_int DaysInMonth()
	{
		return CQt.QDate_DaysInMonth((.)this.ptr.Ptr);
	}
	public c_int DaysInYear()
	{
		return CQt.QDate_DaysInYear((.)this.ptr.Ptr);
	}
	public c_int WeekNumber()
	{
		return CQt.QDate_WeekNumber((.)this.ptr.Ptr);
	}
	public c_int Year2(IQCalendar cal)
	{
		return CQt.QDate_Year2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int Month2(IQCalendar cal)
	{
		return CQt.QDate_Month2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int Day2(IQCalendar cal)
	{
		return CQt.QDate_Day2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int DayOfWeek2(IQCalendar cal)
	{
		return CQt.QDate_DayOfWeek2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int DayOfYear2(IQCalendar cal)
	{
		return CQt.QDate_DayOfYear2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int DaysInMonth2(IQCalendar cal)
	{
		return CQt.QDate_DaysInMonth2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public c_int DaysInYear2(IQCalendar cal)
	{
		return CQt.QDate_DaysInYear2((.)this.ptr.Ptr, (.)cal?.ObjectPtr);
	}
	public QDateTime_Ptr StartOfDay()
	{
		return QDateTime_Ptr(CQt.QDate_StartOfDay((.)this.ptr.Ptr));
	}
	public QDateTime_Ptr EndOfDay()
	{
		return QDateTime_Ptr(CQt.QDate_EndOfDay((.)this.ptr.Ptr));
	}
	public QDateTime_Ptr StartOfDay2(IQTimeZone zone)
	{
		return QDateTime_Ptr(CQt.QDate_StartOfDay2((.)this.ptr.Ptr, (.)zone?.ObjectPtr));
	}
	public QDateTime_Ptr EndOfDay2(IQTimeZone zone)
	{
		return QDateTime_Ptr(CQt.QDate_EndOfDay2((.)this.ptr.Ptr, (.)zone?.ObjectPtr));
	}
	public void ToString(String outStr)
	{
		CQt.QDate_ToString((.)this.ptr.Ptr);
	}
	public void ToString2(String outStr, String format)
	{
		CQt.QDate_ToString2((.)this.ptr.Ptr, libqt_string(format));
	}
	public bool SetDate(c_int year, c_int month, c_int day)
	{
		return CQt.QDate_SetDate((.)this.ptr.Ptr, year, month, day);
	}
	public bool SetDate2(c_int year, c_int month, c_int day, IQCalendar cal)
	{
		return CQt.QDate_SetDate2((.)this.ptr.Ptr, year, month, day, (.)cal?.ObjectPtr);
	}
	public void GetDate(c_int* year, c_int* month, c_int* day)
	{
		CQt.QDate_GetDate((.)this.ptr.Ptr, year, month, day);
	}
	public QDate_Ptr AddDays(c_longlong days)
	{
		return QDate_Ptr(CQt.QDate_AddDays((.)this.ptr.Ptr, days));
	}
	public QDate_Ptr AddMonths(c_int months)
	{
		return QDate_Ptr(CQt.QDate_AddMonths((.)this.ptr.Ptr, months));
	}
	public QDate_Ptr AddYears(c_int years)
	{
		return QDate_Ptr(CQt.QDate_AddYears((.)this.ptr.Ptr, years));
	}
	public QDate_Ptr AddMonths2(c_int months, IQCalendar cal)
	{
		return QDate_Ptr(CQt.QDate_AddMonths2((.)this.ptr.Ptr, months, (.)cal?.ObjectPtr));
	}
	public QDate_Ptr AddYears2(c_int years, IQCalendar cal)
	{
		return QDate_Ptr(CQt.QDate_AddYears2((.)this.ptr.Ptr, years, (.)cal?.ObjectPtr));
	}
	public c_longlong DaysTo(IQDate d)
	{
		return CQt.QDate_DaysTo((.)this.ptr.Ptr, (.)d?.ObjectPtr);
	}
	public QDate_Ptr CurrentDate()
	{
		return QDate_Ptr(CQt.QDate_CurrentDate());
	}
	public QDate_Ptr FromString4(String stringVal)
	{
		return QDate_Ptr(CQt.QDate_FromString4(libqt_string(stringVal)));
	}
	public QDate_Ptr FromString5(String stringVal, String format)
	{
		return QDate_Ptr(CQt.QDate_FromString5(libqt_string(stringVal), libqt_string(format)));
	}
	public bool IsValid2(c_int y, c_int m, c_int d)
	{
		return CQt.QDate_IsValid2(y, m, d);
	}
	public bool IsLeapYear(c_int year)
	{
		return CQt.QDate_IsLeapYear(year);
	}
	public QDate_Ptr FromJulianDay(c_longlong jd_)
	{
		return QDate_Ptr(CQt.QDate_FromJulianDay(jd_));
	}
	public c_longlong ToJulianDay()
	{
		return CQt.QDate_ToJulianDay((.)this.ptr.Ptr);
	}
	public c_int WeekNumber1(c_int* yearNum)
	{
		return CQt.QDate_WeekNumber1((.)this.ptr.Ptr, yearNum);
	}
	public QDateTime_Ptr StartOfDay1(Qt_TimeSpec spec)
	{
		return QDateTime_Ptr(CQt.QDate_StartOfDay1((.)this.ptr.Ptr, spec));
	}
	public QDateTime_Ptr StartOfDay22(Qt_TimeSpec spec, c_int offsetSeconds)
	{
		return QDateTime_Ptr(CQt.QDate_StartOfDay22((.)this.ptr.Ptr, spec, offsetSeconds));
	}
	public QDateTime_Ptr EndOfDay1(Qt_TimeSpec spec)
	{
		return QDateTime_Ptr(CQt.QDate_EndOfDay1((.)this.ptr.Ptr, spec));
	}
	public QDateTime_Ptr EndOfDay22(Qt_TimeSpec spec, c_int offsetSeconds)
	{
		return QDateTime_Ptr(CQt.QDate_EndOfDay22((.)this.ptr.Ptr, spec, offsetSeconds));
	}
	public void ToString1(String outStr, Qt_DateFormat format)
	{
		CQt.QDate_ToString1((.)this.ptr.Ptr, format);
	}
	public void ToString22(String outStr, String format, IQCalendar cal)
	{
		CQt.QDate_ToString22((.)this.ptr.Ptr, libqt_string(format), (.)cal?.ObjectPtr);
	}
	public QDate_Ptr FromString23(String stringVal, Qt_DateFormat format)
	{
		return QDate_Ptr(CQt.QDate_FromString23(libqt_string(stringVal), format));
	}
	public QDate_Ptr FromString34(String stringVal, String format, IQCalendar cal)
	{
		return QDate_Ptr(CQt.QDate_FromString34(libqt_string(stringVal), libqt_string(format), (.)cal?.ObjectPtr));
	}
}
interface IQDate : IQtObjectInterface
{
}
